# morsk

./: Cargo.toml  README.md
.github/workflows/: build.yml  clippy.yml
morsk/: Cargo.toml
morsk/src/: lib.rs
morsk/tests/: trait_sealing.rs
morskros/: Cargo.toml
morskros/src/: lib.rs
morskros/tests/: proc.rs
src/: lib.rs  traits.rs
